--- a/app/admin/components/parent-main-modules/parent-main-modules.component.html
+++ b/app/admin/components/parent-main-modules/parent-main-modules.component.html
@@ -48,12 +48,12 @@
 
                         <th style="width:60%">
                             Description
-                            <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'modulename' "
-                                (click)="sortBy = 'modulename'; sortOrder = 'ASC' "></i>
+                            <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'mainmainmodulename' "
+                                (click)="sortBy = 'mainmainmodulename'; sortOrder = 'ASC' "></i>
                             <i class="fa fa-sort-up hand-icon text-primary"
-                                *ngIf="sortBy == 'modulename' && sortOrder == 'ASC' " (click)="sortOrder = 'DESC' "></i>
+                                *ngIf="sortBy == 'mainmainmodulename' && sortOrder == 'ASC' " (click)="sortOrder = 'DESC' "></i>
                             <i class="fa fa-sort-down hand-icon text-primary"
-                                *ngIf="sortBy == 'modulename' && sortOrder == 'DESC' " (click)="sortOrder = 'ASC' "></i>
+                                *ngIf="sortBy == 'mainmainmodulename' && sortOrder == 'DESC' " (click)="sortOrder = 'ASC' "></i>
                         </th>
                         <th style="width: 20%;">Status</th>
 
@@ -62,7 +62,7 @@
                     <tr
                         *ngFor="let menu of mainMenus | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
 
-                        <td>{{menu.modulename}}</td>
+                        <td>{{menu.mainmodulename}}</td>
                         <td>{{menu.isactive}}</td>
 
                         <td class="text-center">
@@ -143,15 +143,15 @@
                     <div class="form-group row">
                         <label for="txtDescription" class="col-sm-4 col-form-label">Description</label>
                         <div class="col-sm-8">
-                            <input type="text" autocomplete="off" id="modulename" class="form-control"
-                                placeholder="Description" name="modulename" formControlName="modulename" maxlength="30"
-                                #defaultTextBox_New [ngClass]="{ 'is-invalid': newForm.get('modulename').invalid 
-                && (newForm.get('modulename').dirty || newForm.get('modulename').touched || newForm.valid), 
-                'is-valid': newForm.get('modulename').valid && (newForm.get('modulename').dirty 
-                || newForm.get('modulename').touched || newForm.valid) }" #ProcedureDesc>
-                            <span class="text-danger" *ngIf="newForm.get('modulename').invalid 
-                && (newForm.get('modulename').dirty || newForm.get('modulename').touched || newForm.valid) 
-                && newForm.get('modulename').errors?.required">Description can't be blank!</span>
+                            <input type="text" autocomplete="off" id="mainmainmodulename" class="form-control"
+                                placeholder="Description" name="mainmainmodulename" formControlName="mainmodulename" maxlength="30"
+                                #defaultTextBox_New [ngClass]="{ 'is-invalid': newForm.get('mainmodulename').invalid 
+                && (newForm.get('mainmodulename').dirty || newForm.get('mainmodulename').touched || newForm.valid), 
+                'is-valid': newForm.get('mainmodulename').valid && (newForm.get('mainmodulename').dirty 
+                || newForm.get('mainmodulename').touched || newForm.valid) }" #ProcedureDesc>
+                            <span class="text-danger" *ngIf="newForm.get('mainmodulename').invalid 
+                && (newForm.get('mainmodulename').dirty || newForm.get('mainmodulename').touched || newForm.valid) 
+                && newForm.get('mainmodulename').errors?.required">Description can't be blank!</span>
                         </div>
                     </div>
 
@@ -192,13 +192,13 @@
                         <label for="txtEdit" class="col-sm-4 col-form-label">Description</label>
                         <div class="col-sm-8">
                             <input type="text" autocomplete="off" id="txtdescription" class="form-control"
-                                placeholder="Description" name="modulename" formControlName="modulename" maxlength="30"
-                                #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('modulename').invalid 
-                && (editForm.get('modulename').dirty || editForm.get('modulename').touched || editForm.valid), 'is-valid': editForm.get('modulename').valid 
-                && (editForm.get('modulename').dirty || editForm.get('modulename').touched || editForm.valid) }">
-                            <span class="text-danger" *ngIf="editForm.get('modulename').invalid 
-                && (editForm.get('modulename').dirty || editForm.get('modulename').touched || editForm.valid) 
-                && editForm.get('modulename').errors?.required">Status can't be blank</span>
+                                placeholder="Description" name="mainmodulename" formControlName="mainmodulename" maxlength="30"
+                                #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('mainmodulename').invalid 
+                && (editForm.get('mainmodulename').dirty || editForm.get('mainmodulename').touched || editForm.valid), 'is-valid': editForm.get('mainmodulename').valid 
+                && (editForm.get('mainmodulename').dirty || editForm.get('mainmodulename').touched || editForm.valid) }">
+                            <span class="text-danger" *ngIf="editForm.get('mainmodulename').invalid 
+                && (editForm.get('mainmodulename').dirty || editForm.get('mainmodulename').touched || editForm.valid) 
+                && editForm.get('mainmodulename').errors?.required">Status can't be blank</span>
                         </div>
                     </div>
 
