--- a/app/admin/components/parent-main-modules/parent-main-modules.component.html
+++ b/app/admin/components/parent-main-modules/parent-main-modules.component.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="ml-auto p-2">
-                <button class="addbtnStyle" data-toggle="modal" data-target="#newDataModal" data-backdrop="false"
+                <button class="addbtnStyle" data-toggle="modal" data-target="#newDataModal1" data-backdrop="false"
                     data-keyboard="false" (click)="onNewClick($event)"><span class="fa fa-plus"> </span> Add
                     New Data</button>
             </div>
@@ -69,7 +69,7 @@
 
                         <td class="text-center">
                             <button mat-stroked-button color="primary" class="editbtnStyle"
-                                (click)="onEditClick($event, menu)" data-toggle="modal" data-target="#editModal"
+                                (click)="onEditClick($event, menu)" data-toggle="modal" data-target="#editModal1"
                                 data-backdrop="false" data-keyboard="false">
                                 <mat-icon> update</mat-icon>
                             </button>&nbsp;
@@ -133,7 +133,7 @@
 
 <!-- Add Lab Test Procedure -->
 <form novalidate="novalidate" [formGroup]="newForm">
-    <div class="modal" role="dialog" id="newDataModal">
+    <div class="modal" role="dialog" id="newDataModal1">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header bg-all text-white">
@@ -182,7 +182,7 @@
 
 <!-- Edit Lab Test Procedure -->
 <form novalidate="novalidate" [formGroup]="editForm">
-    <div class="modal" role="dialog" id="editModal">
+    <div class="modal" role="dialog" id="editModal1">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header bg-all text-white">
